# lee-llm-router

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  WHERE_AM_I.md  context.md  design.md  product-definition.md  project-plan.md  pyproject.toml  result-review.md  sprint-plan.md
backlog/: schema.md
docs/: config.md  llm-coder-guide.md  providers.md
src/lee_llm_router/: __init__.py  config.py  doctor.py  policy.py  router.py  telemetry.py
src/lee_llm_router/providers/: codex_cli.py  http.py  mock.py  openai_codex_subscription.py  registry.py
src/lee_llm_router/templates/: llm.example.yaml
tests/: conftest.py  test_async.py  test_config.py  test_doctor.py  test_providers.py  test_router.py  test_smoke.py
tests/fixtures/: llm_test.yaml  pi_harness.py
