[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lee-llm-router"
version = "0.1.0"
description = "Shared LLM routing kernel — config, providers, telemetry, doctor CLI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Lee Harrington"}
]
keywords = ["llm", "routing", "openrouter", "openai", "telemetry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "build>=1.0",
]

[project.scripts]
lee-llm-router = "lee_llm_router.doctor:main"

[project.urls]
Repository = "https://github.com/leeharrington/lee-llm-router"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lee_llm_router = ["templates/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
ignore = []
